--- a/KTU-SA-WEB/src/pages/home/Components/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/HeroImage.module.css
@@ -4,21 +4,22 @@
     justify-content: center;
     margin-left: 48px;
     margin-right: 48px;
-    width: 100;
-    height: 556px;
+    width: 95%;
+    height: 70vh;
     background-color: rgba(241,246,255,255);
+    border-radius: 8px;
 }
 
 .Text {
     padding-left: 40px;
-    width: 476px;
+    width: 40%;
 }
 
 .Title {
     font-weight: bold;
     color: transparent;
     -webkit-text-stroke: 3px #114D8A;
-    font-size: 100px;
+    font-size: 7vw;
     line-height: 0.95;
     letter-spacing: 6px;
     margin-bottom: 50px;
@@ -27,9 +28,7 @@
 
 .Description {
     color: #114D8A;
-    font-size: 20px;
+    font-size: 1.5vw;
     line-height: 1.1;
-    width: 400px;
-    top: 0;
     letter-spacing: 1px;
 }
