--- a/KTU-SA-WEB/src/pages/home/Components/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/HeroImage.module.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 48px;
-    margin-right: 48px;
-    width: 95%;
+    margin-left: 150px;
+    width: 85vw;
     height: 70vh;
     background-color: rgba(241,246,255,255);
     border-radius: 8px;
