--- a/KTU-SA-WEB/src/pages/home/Components/ImportantInfoCard/ImportantInfoCard.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/ImportantInfoCard/ImportantInfoCard.module.css
@@ -1,4 +1,5 @@
 .Container {
+    position: relative;
     display: flex;
     width: 100;
     height: 102px;
@@ -49,3 +50,34 @@
     border: 2px solid #153C65;
     border-radius: 8px;
 }
+
+.HotContainer {
+    position: absolute;
+    top: -50px;
+    left: 70%;
+    transform: rotate(30deg);
+}
+
+.Hot {
+    color: #FFD324;
+    font-size: 30.005px;
+    font-style: normal;
+    font-weight: 1000;
+    line-height: 140%;
+    letter-spacing: 1.2px;
+    -webkit-animation: pulse 3s linear infinite;
+    animation: pulse 3s linear infinite;
+}
+
+
+@-webkit-keyframes pulse {
+    0% { -webkit-transform: scale(1); }
+    50% { -webkit-transform: scale(1.4); }
+    100% { -webkit-transform: scale(1); }
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.4); }
+    100% { transform: scale(1); } 
+} 
