--- a/KTU-SA-WEB/src/pages/home/Components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/heroImage/HeroImage.module.css
@@ -1,9 +1,7 @@
-.Margins{
+.Container{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 150px;
-    width: 85vw;
+    flex-direction: row;
+    width: 100%;
     height: 70vh;
     background-color: rgba(241,246,255,255);
     border-radius: 8px;
@@ -26,18 +24,20 @@
 }
 
 .Description {
-    color: #114D8A;
+    color: #268df5;
     font-size: 1.5vw;
     line-height: 1.1;
     letter-spacing: 1px;
 }
 
-.Images {
+.ImagesContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .ImageCard1{
-    width: 238.634px;
-    height: 312.749px;
     transform: rotate(-7.402deg);
     padding: 8px;
     border-radius: var(--Border, 8px);
@@ -59,30 +59,61 @@
 }
 
 .Image {
-    align-self: stretch;
     border-radius: 4px;
-    width: 238.634px;
-    height: 312.749px;
-    object-fit: cover;
+    max-width: 25vw;
+    max-height: 35vh;
 }
 
 .ImagePos1 {
-    position: absolute;
-    right: 18vw;
-    top: 33vh;
+    position: relative;
+    right: -23vw;
+    top: 10vh;
     z-index: 2;
 }
 
 .ImagePos2 {
-    position: absolute;
-    right: 20vw;
-    top: 15vh;
+    position: relative;
+    right: -5vw;
+    top: -8vh;
     z-index: 1;
 }
 
 .ImagePos3 {
-    position: absolute;
-    right: 31vw;
-    top: 25svh;
+    position: relative;
+    right: 18vw;
+    top: 0;
     z-index: 3;
+}
+
+@media (max-width: 1300px) {
+    .Container{
+        display: flex;
+        flex-direction: column;
+    }
+    .Image {
+        border-radius: 4px;
+        max-width: 15vw;
+        max-height: 25vh;
+    }
+    
+    .ImagePos1 {
+        position: relative;
+        right: -23vw;
+        top: 10vh;
+        z-index: 2;
+    }
+    
+    .ImagePos2 {
+        position: relative;
+        right: -5vw;
+        top: 0;
+        z-index: 1;
+    }
+    
+    .ImagePos3 {
+        position: relative;
+        right: 25vw;
+        top: 5vh;
+        z-index: 3;
+    }
 }
