--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -86,7 +86,12 @@
     .ImageContainer {
         display: flex;
         flex-direction: row;
+        justify-content: flex-start;
         margin: 0;
+    }
+
+    .ImageContainer[data-isOn="true"] {
+        justify-content: center;
         margin-bottom: 40px;
     }
 }
