--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -1,16 +1,17 @@
-.Container{
+.Container {
     display: flex;
     overflow: hidden;
 }
 
 .ImageContainer {
     margin-right: 100px;
+    z-index: 30;
 }
 
-.ImageBackground{
+.ImageBackground {
     position: absolute;
     background: #FFF;
-    border-radius: 0px 0px 10px 0;
+    border-radius: 0 0 10px 0;
     padding: 21px 15px;
 }
 
@@ -22,18 +23,22 @@
     align-items: center;
 }
 
-.Category {
+.Button {
     display: inline-flex;
     padding: 4px;
     justify-content: center;
     align-items: center;
     color: #0E2643;
+    border-radius: 4px;
+    border: 0;
+    background-color: #FFF;
+    font-family: PF DinText Pro;
+    font-size: 16px;
+    font-weight: 500;
 }
 
-.Category:hover {
-    border-radius: 4px;
+.Button:hover {
     background: #C0DCF7;
-    color: #0E2643;
 }
 
 .Social {
@@ -55,25 +60,18 @@
     cursor: pointer;
 }
 
-.Center {
-    justify-content: center;
-}
-
 @media (max-width: 1200px) {
-
-    .Container{
-        display: flex;
+    .Container {
         flex-direction: column;
     }
 
-    .HamburgerIcon{
+    .HamburgerIcon {
         display: block;
         margin-left: auto;
         margin-top: 21px;
     }
     
     .NavbarContent {
-        display: flex;
         flex-direction: column;
         align-items: start;
     }
