--- a/KTU-SA-WEB/src/components/footerBar/FooterBar.module.css
+++ b/KTU-SA-WEB/src/components/footerBar/FooterBar.module.css
@@ -44,6 +44,7 @@
     color: #F6F7F8;
     text-decoration: inherit;
     font-weight: inherit;
+    font-size: 16px;
 }
 
 .NavSection :not(.Header):hover {
