--- a/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
@@ -4,8 +4,52 @@
     border-bottom: #FFD324 1px solid;
     right: 0;
     left: 0;
-    padding: 48px;
+    padding: 20px;
     z-index: 10;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    gap: 30px;
+    height: 20vh;
+}
+
+.Description {
+    color: #CE8C00;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    width: 15vw;
+}
+
+.Section {
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+.Section :hover {
+    color: #4A9FE6;
+}
+
+.Link {
+    color: #153C65;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.Header {
+    color: #153C65;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0;
+    width: 100%;
+}
+
+.Header :hover {
+    color: #153C65;
 }
