--- a/KTU-SA-WEB/src/components/ArticleCard/ArticleCard.module.css
+++ b/KTU-SA-WEB/src/components/ArticleCard/ArticleCard.module.css
@@ -1,11 +1,17 @@
 .Card {
     display: flex;
-    width: 499px;
+    max-width: 500px;
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
-    border-radius: var(--Border, 8px);
+    border-radius: 8px;
     background: #FFD324;
+}
+
+.Card[data-isOn="true"] {
+    background: #fff;
+    padding: 0;
+    height: 100%;
 }
 
 .Text {
@@ -16,38 +22,40 @@
 }
 
 .Title {
-    color: var(--black-haze-950, #24282D);
-    font-size: 28px;
-    font-style: normal;
+    color: #24282D;
+    font-size: 3vh;
     font-weight: 500;
-    line-height: 120%; /* 33.6px */
-    letter-spacing: 1.12px;
+    line-height: 120%;
     margin-top: 28px;
     margin-bottom: 0;
+    width: 100%;
 }
 
 .Date {
-    color: var(--bright-sun-700, #A46304);
+    color: #A46304;
     font-size: 12px;
-    font-style: normal;
     font-weight: 500;
-    line-height: 120%; /* 14.4px */
+    line-height: 120%;
     letter-spacing: 0.48px;
+}
+
+.Date[data-isOn="true"] {
+    color: #8C9BA4;
 }
 
 .Description {
     align-self: stretch;
-    color: var(--black-haze-950, #24282D);
+    color: #24282D;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 140%; /* 19.6px */
+    line-height: 140%;
     letter-spacing: 0.56px;
 }
 
 .Image {
     border-radius: 4px;
-    height: 358px;
-    flex-shrink: 0;
-    align-self: stretch;
+    height: auto;
+    object-fit: cover;
+    width: 100%;
 }
