--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -11,7 +11,7 @@
 .ImageBackground {
     position: absolute;
     background: #FFF;
-    border-radius: 0 0 10px 0;
+    border-radius: 0 0 10px 10px;
     padding: 21px 15px;
 }
 
