--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -19,6 +19,7 @@
     display: flex;
     width: 100%;
     padding: 24px 0;
+    gap: 10px;
     justify-content: space-between;
     align-items: center;
 }
@@ -30,9 +31,7 @@
     align-items: center;
     color: #0E2643;
     border-radius: 4px;
-    border: 0;
     background-color: #FFF;
-    font-family: PF DinText Pro;
     font-size: 16px;
     font-weight: 500;
 }
