Fix: fixed refresh token; WIP: admin dashboard

--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -87,7 +87,7 @@
         margin: 0;
     }
 
-    .ImageContainer[data-isOn="true"] {
+    .ImageContainer[data-ison="true"] {
         justify-content: center;
         margin-bottom: 40px;
     }
