--- a/KTU-SA-WEB/src/components/sectionName/SectionName.module.css
+++ b/KTU-SA-WEB/src/components/sectionName/SectionName.module.css
@@ -7,7 +7,7 @@
 }
 
 .Header {
-    color: var(--black-haze-950, #24282D);
+    color: #24282D;
     font-size: 38px;
     font-style: normal;
     font-weight: 500;
