feat: navigation for logged in user

--- a/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/NavigationBar/Navbar.module.css
@@ -3,6 +3,12 @@
     overflow: hidden;
 }
 
+.Account {
+    display: flex; 
+    align-items: center;
+    gap: 20px;
+}
+
 .ImageContainer {
     margin-right: 100px;
     z-index: 30;
