--- a/KTU-SA-WEB/src/components/articleCard/ArticleCard.module.css
+++ b/KTU-SA-WEB/src/components/articleCard/ArticleCard.module.css
@@ -8,7 +8,7 @@
     background: #FFD324;
 }
 
-.Card[data-isOn="true"] {
+.Card[data-ison="true"] {
     background: #fff;
     padding: 0;
     height: 100%;
@@ -39,7 +39,7 @@
     letter-spacing: 0.48px;
 }
 
-.Date[data-isOn="true"] {
+.Date[data-ison="true"] {
     color: #8C9BA4;
 }
 
