feat: font fix for production

--- a/KTU-SA-WEB/src/index.css
+++ b/KTU-SA-WEB/src/index.css
@@ -1,5 +1,20 @@
+@font-face {
+  font-family: 'PFDinTextPro-Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('PFDinTextPro-Regular'), url('./assets/PFDinTextPro-Regular.woff') format('woff');
+}
+
+
+@font-face {
+  font-family: 'PFDinTextPro-Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('PFDinTextPro-Bold'), url('./assets/PFDinTextPro-Bold.woff') format('woff');
+}
+
 :root {
-  font-family: 'PF DinText Pro', sans-serif;
+  font-family: 'PFDinTextPro-Regular', 'PFDinTextPro-Bold';
   overflow-x: hidden;
 }
 
