--- a/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
@@ -38,8 +38,9 @@
     color: #0E2643;
     border-radius: 4px;
     background-color: #FFF;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 20px;
+    font-family: "PFDinTextPro-Regular";
+    font-weight: 600;
 }
 
 .Button:hover {
