--- a/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
@@ -42,7 +42,7 @@
 }
 
 .HeroImage {
-    max-width: 500px;
+    max-width: 30vw;
     border: 8px solid;
     border-radius: 10px;
     padding: 1px;
