--- a/KTU-SA-WEB/src/pages/home/Components/textWithLinks/TextWithLinks.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/textWithLinks/TextWithLinks.module.css
@@ -5,16 +5,24 @@
 
 .Text {
     width: 90vw;
-    font-weight: bold;
     color: #114D8A;
     font-size: 58px;
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 62px;
     padding-bottom: 62px;
+    font-family: "PFDinTextPro-Bold";
 }
 
 .TextUnderlined {
     color: #EFB603;
     text-decoration: underline;
+}
+
+.TextUnderlined:hover {
+    color: #FFD324;
+}
+
+.TextUnderlined:active {
+    color: #268df5;
 }
