--- a/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
@@ -3,12 +3,6 @@
     overflow: hidden;
 }
 
-.Account {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
 .ImageContainer {
     margin-right: 100px;
     z-index: 30;
@@ -40,7 +34,10 @@
     background-color: #FFF;
     font-size: 20px;
     font-family: "PFDinTextPro-Regular";
-    font-weight: 600;
+}
+
+.Text{
+    font-weight: 700;
 }
 
 .Button:hover {
