--- a/KTU-SA-WEB/src/pages/home/Components/DividerLine/DividerLine.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/DividerLine/DividerLine.module.css
@@ -3,20 +3,19 @@
     position: absolute;
     align-items: center;
     flex-shrink: 0;
-    height: 130px;
-    width: 100vw;
+    height: 140px;
+    width: 110vw;
     left: -20px;
     background-color: #0E2643;
     transform: rotate(-3.5deg);
-    color: white;
     white-space: nowrap;
     font-size: 66px;
     font-weight: 500;
-    line-height: 140%;
     letter-spacing: 10px;
     color: transparent;
-    margin: 10vh auto;
     -webkit-text-stroke: 2px #FFE343;
+    font-family: "PFDinTextPro-Bold";
+    overflow: hidden;
 }
 
 .Container {
@@ -25,6 +24,5 @@
 }
 
 .Text {
-    display:inline-block;
     margin-right: 100px;
 }
