--- a/KTU-SA-WEB/src/pages/home/Components/DividerLine/DividerLine.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/DividerLine/DividerLine.module.css
@@ -2,15 +2,13 @@
     display: flex;
     position: absolute;
     align-items: center;
-    flex-shrink: 0;
     height: 140px;
-    width: 110vw;
+    width: 100vw;
     left: -20px;
     background-color: #0E2643;
     transform: rotate(-3.5deg);
     white-space: nowrap;
     font-size: 66px;
-    font-weight: 500;
     letter-spacing: 10px;
     color: transparent;
     -webkit-text-stroke: 2px #FFE343;
@@ -20,7 +18,7 @@
 
 .Container {
     height: 35vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .Text {
