--- a/KTU-SA-WEB/src/components/sectionName/SectionName.module.css
+++ b/KTU-SA-WEB/src/components/sectionName/SectionName.module.css
@@ -1,20 +1,27 @@
 .Container {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    align-self: stretch;
-    padding-bottom: 32px;
+    margin-bottom: 32px;
 }
 
 .Header {
+    display: flex;
     color: #24282D;
     font-size: 38px;
     font-weight: 600;
     letter-spacing: -0.5px;
-    margin: 0;
+    gap: 16px;
 }
 
 .Arrow {
-    width: 32.527px;
-    height: 35.78px;
+    width: 32px;
+    height: 35px;
+    margin-top: 4px;
+}
+
+@media (max-width: 940px) {
+    .Header {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        gap: 16px;
+    }
 }
