--- a/KTU-SA-WEB/src/pages/home/Components/fsa/Fsa.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/fsa/Fsa.module.css
@@ -1,5 +1,5 @@
 .SectionContainer {
-    margin-top: 60vh;
+    margin-top: 641px;
 }
 
 .Container {
@@ -32,6 +32,6 @@
 
 @media (max-width: 940px) {
     .SectionContainer {
-        margin-top: 145vh;
+        margin-top: 1200px;
     }
 }
