--- a/KTU-SA-WEB/src/pages/home/Components/SocialMedia/SocialMedia.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/SocialMedia/SocialMedia.module.css
@@ -9,7 +9,7 @@
     position: absolute;
     left: 0;
     height: 737px;
-    width: 100.45%;
+    width: 100%;
     background-color: #89C0F0;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@
     position: relative;
     left: -150px;
     margin-bottom: -2px;
-    border-left: 100.45vw solid transparent;
+    border-left: 100vw solid transparent;
 	border-bottom: 95px solid #89C0F0;
     z-index: 2;
 }
@@ -40,7 +40,8 @@
     position: relative;
     left: -150px;
     margin-top: auto;
-    border-left: 100.45vw solid #89C0F0;
+    margin-bottom: 9px;
+    border-left: 100vw solid #89C0F0;
 	border-bottom: 95px solid #0E2643;
 }
 
