--- a/KTU-SA-WEB/src/components/articleCard/ArticleCard.module.css
+++ b/KTU-SA-WEB/src/components/articleCard/ArticleCard.module.css
@@ -23,20 +23,19 @@
 
 .Title {
     color: #24282D;
-    font-size: 3vh;
-    font-weight: 500;
-    line-height: 120%;
-    margin-top: 28px;
-    margin-bottom: 0;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 130%;
+    margin-top: 10px;
+    margin-bottom: 5px;
     width: 100%;
 }
 
 .Date {
     color: #A46304;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 120%;
-    letter-spacing: 0.48px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 
 .Date[data-ison="true"] {
@@ -46,11 +45,10 @@
 .Description {
     align-self: stretch;
     color: #24282D;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
+    font-size: 20px;
+    font-weight: 500;
     line-height: 140%;
-    letter-spacing: 0.56px;
+    letter-spacing: 1px;
 }
 
 .Image {
@@ -58,4 +56,5 @@
     height: auto;
     object-fit: cover;
     width: 100%;
+    height: 358px;
 }
