--- a/KTU-SA-WEB/src/pages/home/Components/articles/Articles.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/articles/Articles.module.css
@@ -1,19 +1,22 @@
 .Container {
+    margin-bottom: 64px;
+}
+
+.Section {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
-    gap: 24px;
-    align-self: stretch;
-    height: 100%;
-    width: 100%;
+    gap: 50px;
 }
 
 .GridContainer  {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 6vh;
+    margin-top: 24px;
+    gap: 25px;
+    margin-bottom: 24px;
 }
 
 .ButtonContainer {
@@ -21,14 +24,14 @@
     justify-content: center;
 }
 
-@media (max-width: 1200px) {
-    .Container {
+@media (max-width: 1600px) {
+    .Section {
         flex-direction: column;
         align-items: center;
     }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 940px) {
     .GridContainer  {
         display: flex;
         flex-direction: column;
