--- a/KTU-SA-WEB/src/components/socialIcons/SocialIcons.module.css
+++ b/KTU-SA-WEB/src/components/socialIcons/SocialIcons.module.css
@@ -7,6 +7,18 @@
     margin-left: auto;
 }
 
+.Icon {
+    display: flex;
+}
+
+.Flag {
+    border-radius: 3px;
+    height: 20px;
+    width: 35px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
 @media (max-width: 1200px) {
     .Social {
         margin-left: 0;
