--- a/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
@@ -47,6 +47,12 @@
     width: 100%;
 }
 
+.ExpandedContainer {
+    display: flex;
+    width: 50vw;
+    justify-content: space-around;
+}
+
 @media (max-width: 1300px) {
     .Container {
         height: auto;
