--- a/KTU-SA-WEB/src/components/contactCard/ContactCard.module.css
+++ b/KTU-SA-WEB/src/components/contactCard/ContactCard.module.css
@@ -1,9 +1,8 @@
 .Container{
     display: flex;
-    flex-direction: column;
-    width: 280px;
     align-items: center;
-    gap: 24px;
+    gap: 10px;
+    max-width: 480px;
 }
 
 .Image {
@@ -14,9 +13,8 @@
     border-radius: 8px;
     object-fit: cover;
 }
+
 .Information {
-    width: 100%;
-    color: #000;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -25,26 +23,32 @@
 .Name {
     font-size: 25px;
     font-weight: 400;
-    margin: 0;
-    text-align: left;
-
 }
 
 .Position {
-    margin-top: 10px;
-    margin-bottom: 0;
-    font-size: 16px;
     font-weight: 700;
-    letter-spacing: 0.25px;
 }
 
 .Contacts {
-    margin: 0;
     color:#48535C;
-    font-size: 16px;
-    font-weight: 400;
-    letter-spacing: 0.25px;
     display: flex;
-    gap: 5px;
     align-items: center;
+    gap: 5px;
+}
+
+@media (max-width: 600px) {
+    .Image {
+        width: 247px;
+        height: 300px;
+    }
+
+    .Container{
+        flex-direction: column;
+        max-width: 300px;
+    }
+
+    .Information, .MainSection{
+        align-items: center;
+        text-align: center;
+    }
 }
