--- a/KTU-SA-WEB/src/pages/articles/Articles.module.css
+++ b/KTU-SA-WEB/src/pages/articles/Articles.module.css
@@ -5,8 +5,9 @@
 
 .GridContainer{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
+    margin-bottom: 200px;
 }
 
 @media (max-width: 1500px) { 
