--- a/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/Navbar.module.css
@@ -26,7 +26,7 @@
 
 .Button {
     display: inline-flex;
-    padding: 4px;
+    padding: 4px 8px;
     justify-content: center;
     align-items: center;
     color: #0E2643;
@@ -34,6 +34,7 @@
     background-color: #FFF;
     font-size: 20px;
     font-family: "PFDinTextPro-Regular";
+    transition: 0.3s;
 }
 
 .Text{
@@ -42,6 +43,7 @@
 
 .Button:hover {
     background: #C0DCF7;
+    transition: 0.3s;
 }
 
 .Social {
