--- a/KTU-SA-WEB/src/components/navigationBar/navigationButton/NavigationButton.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/navigationButton/NavigationButton.module.css
@@ -1,6 +1,7 @@
 .Button {
     display: inline-flex;
     padding: 4px;
+    padding-left: 10px;
     justify-content: center;
     align-items: center;
     color: #0E2643;
@@ -10,9 +11,11 @@
     font-size: 20px;
     font-family: "PFDinTextPro-Regular";
     font-weight: 700;
+    transition: 0.3s;
 }
 
 .Button:hover {
     background: #C0DCF7;
     cursor: pointer;
+    transition: 0.3s;
 }
