fix: fixing added eslint rules

--- a/KTU-SA-WEB/src/pages/article/Article.module.css
+++ b/KTU-SA-WEB/src/pages/article/Article.module.css
@@ -2,5 +2,10 @@
     display: flex;
     align-items: start;
     margin-top: 50vh;
+}
 
+.Svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
